# Nobias

./: .gitignore  ACTIONABLE_INSIGHTS_COMPLETE.md  API_REFERENCE.md  BEFORE_AFTER_COMPARISON.md  CLEANUP_SUMMARY.md  FIXED_AND_WORKING.md  HOW_TO_TEST_MODEL_AUDIT.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MANIFEST.in  MODEL_AUDIT_INTERPRETER_README.md  NEXT_STEPS.md  PROJECT_STATUS.md  RATE_LIMITING_ANALYSIS.md  README.md  README_TEST_FILES.md  STANDARDIZATION_COMPLETE.md  STANDARDIZATION_PLAN.md  STRUCTURE.md  TEAM_GUIDE.md  TEST_GUIDE.md  create_test_model.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  start-nobias.bat  test_dataset_audit_example.py  test_hiring_data.csv  test_hiring_model.pkl  test_model_audit_example.py
backend/: README.md  diagnose.py  main.py  requirements.txt  start.py  unbiased_mock.py
docs/: ACTIONABLE_INSIGHTS_GUIDE.md  ACTIONABLE_INSIGHTS_SUMMARY.md  AGENT_AUDIT_COMPLETE_GUIDE.md  FAIRSIGHT_IMPLEMENTATION.md  FAIRSIGHT_PHASE1_COMPLETE.md  FAIRSIGHT_PHASE2_COMPLETE.md  FRONTEND_ACTIONABLE_INSIGHTS_QUICK_REF.md  FRONTEND_AGENT_AUDIT_API_SPEC.md  FRONTEND_DATASET_REPORT_SPEC.md  FRONTEND_REPORT_DATA_SPEC.md  GEMINI_INTEGRATION.md  IMPLEMENTATION_COST_SLIDES.md  MODEL_AUDIT_ACTIONABLE_INSIGHTS.md  MODEL_AUDIT_INTERPRETER_SUMMARY.md  NOBIAS_COMPLETE_PRESENTATION_GUIDE.md  NOBIAS_QUICK_REFERENCE.md  NOBIAS_VISUAL_COMPARISON.md  PACKAGE_AGENT_AUDIT_GUIDE.md  PACKAGE_BUILD_GUIDE.md  PACKAGE_CREATION_SUMMARY.md  PDF_REPORT_ENHANCEMENT_SPEC.md  PYPI_UPLOAD_INSTRUCTIONS.md  TOKEN_OPTIMIZATION.md  USAGE.md  frontend_dev_plan.md  logs.md  niru_DATASET_AUDIT_IMPLEMENTATION_GUIDE.md  niru_DATASET_AUDIT_QUICK_START.md  niru_DATASET_AUDIT_VISUAL_SUMMARY.md  niru_MODEL_AUDIT_IMPLEMENTATION_GUIDE.md  niru_MODEL_AUDIT_QUICK_START.md  niru_MODEL_AUDIT_VISUAL_SUMMARY.md  niru_README.md  niru_complete.txt  niru_how_to_run.md  niru_implementation.md  niru_start_here.md  ojas_ OPTIMIZATION_INTEGRATION.md  ojas_AGENT_AUDIT_QUICK_START.md  ojas_AGENT_AUDIT_VISUAL_SUMMARY.md  (+4 more)
documentation/: FairSight_PRD.md  module3_agent_auditor_spec.md
examples/: README.md  README_langgraph.md  actionable_insights_example.py  dataset_actionable_insights_example.py  full_audit_example.py  gemini_audit_example.py  langgraph_agent_server.py  model_audit_example.py  optimized_audit_example.py  report_generation_example.py  test_gemini_connection.py  test_groq_connection.py
js/: api.js  app.js  sidebar.js  store.js  topbar.js
(+46 files in other folders)
